tests/negative/lexer/string_byte1.orng
// string_byte1.orng:6:17: error: 'Z' is not a valid hexadecimal digit
//     let x = "\xZ0" // This is invalid because the first character of Z0 is not a valid hex digit
//                ^
// 
fn main() -> Int {
    let x = "\xZ0" // This is invalid because the first character of Z0 is not a valid hex digit
    0
}